hw03 fixed, used last element of array as head of stak